--- a/Client/Pages/Components.razor
+++ b/Client/Pages/Components.razor
@@ -20,8 +20,11 @@
         <div class="card-header fw-bold">Buttons</div>
         <div class="card-body">
             <div class="row">
-                <div class="col-12">
-                    <Button Label="INI Button haha" btnClass="btn-info" IsBtnIcon />
+                <div>
+                    <Button btnClass="btn-secondary" Label="Download" IsBtnIcon BtnIcon="bi-airplane-engines-fill" />
+                 </div>
+                 <div class="col-12">
+                     <Button Label="INI Button haha" btnClass="btn-info" IsBtnIcon />
                  </div>
                  <div class="col-12">
                      <Button Label="Download" bold btnBlock />
