--- a/Client/Pages/Master Data/Components/JenisMpp/View-jenis-mpp.razor
+++ b/Client/Pages/Master Data/Components/JenisMpp/View-jenis-mpp.razor
@@ -25,17 +25,17 @@
      </div>
  </div>
 
- <Form_jenis_mpp Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+ <Form_jenis_mpp Id="@ApplicationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
  @code {
 
     private JenisMpp formData = new JenisMpp();
     private async void HandleEditBtnJenisMpp(string id)
     {
-        AppliationState.Id = id;
-        if (AppliationState.Id is not null)
+        ApplicationState.Id = id;
+        if (ApplicationState.Id is not null)
         {
-            mySieveModel.Filters = $"Id=={AppliationState.Id}";
+            mySieveModel.Filters = $"Id=={ApplicationState.Id}";
             await JenisMppService.GetJenisMppById(mySieveModel);
             formData = JenisMppService.JenisMpp;
         }
@@ -44,13 +44,13 @@
 
     private void HandleAddJenisMpp()
     {
-        AppliationState.Id = null;
+        ApplicationState.Id = null;
         formData = new JenisMpp();
         StateHasChanged();
     }
 
     [CascadingParameter]
-    public AppState AppliationState { get; set; }
+    public AppState ApplicationState { get; set; }
     private SieveModel mySieveModel = new SieveModel
         {
             Page = 1,
@@ -63,7 +63,7 @@
     private async Task HandleFormSubmission(JenisMpp formData)
     {
         mySieveModel.Filters = "";
-        if (AppliationState.Id is null)
+        if (ApplicationState.Id is null)
         {
             var result = await JenisMppService.CreateJenisMpp(formData);
             if (result.ReasonPhrase == "OK")
@@ -74,7 +74,7 @@
         }
         else
         {
-            var result = await JenisMppService.UpdateJenisMpp(AppliationState.Id, formData);
+            var result = await JenisMppService.UpdateJenisMpp(ApplicationState.Id, formData);
             if (result.ReasonPhrase == "OK")
             {
                 JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonJenisMpp");
