--- a/Client/Shared/Widget/Table.razor
+++ b/Client/Shared/Widget/Table.razor
@@ -115,7 +115,7 @@ else
 
 @code {
     [CascadingParameter]
-    public AppState AppliationState { get; set; }
+    public AppState ApplicationState { get; set; }
     [Parameter]
     public string? label { get; set; }
     [Parameter]
