--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -13,8 +13,12 @@
 @using Blazored.Modal
 @using Blazored.Modal.Services
 @using lunchBlazor.Shared.Models
+@using lunchBlazor.Shared.ViewModels
 @using CurrieTechnologies.Razor.SweetAlert2
 @using Sieve.Models
+@using lunchBlazor.Client.helper
+@using Syncfusion.Blazor.DropDowns
+@using Blazored.LocalStorage
 @using lunchBlazor.Client.helper
 
 @* pages *@
@@ -32,6 +36,9 @@
 @using lunchBlazor.Client.Services.PendidikanService
 @using lunchBlazor.Client.Services.JurusanPendidikanService
 @using lunchBlazor.Client.Services.SumberPemenuhanService
+@using lunchBlazor.Client.Services.MppChildFormService
+@using lunchBlazor.Client.Services.MppFormService
+@using lunchBlazor.Client.Services.AuthService
 
 @* Components *@
 @using lunchBlazor.Client.Pages.Master_Data.Components.Departemen
