--- a/Client/Pages/Master Data/Components/Divisi/View-divisi.razor
+++ b/Client/Pages/Master Data/Components/Divisi/View-divisi.razor
@@ -25,17 +25,17 @@
      </div>
  </div>
 
- <Form_divisi Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+ <Form_divisi Id="@ApplicationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
  @code {
 
     private Divisi formData = new Divisi();
     private async void HandleEditBtnDivisi(string id)
     {
-        AppliationState.Id = id;
-        if (AppliationState.Id is not null)
+        ApplicationState.Id = id;
+        if (ApplicationState.Id is not null)
         {
-            mySieveModel.Filters = $"Id=={AppliationState.Id}";
+            mySieveModel.Filters = $"Id=={ApplicationState.Id}";
             await DivisiService.GetDivisiById(mySieveModel);
             formData = DivisiService.Divisi;
         }
@@ -44,13 +44,13 @@
 
     private void HandleAddDivisi()
     {
-        AppliationState.Id = null;
+        ApplicationState.Id = null;
         formData = new Divisi();
         StateHasChanged();
     }
 
     [CascadingParameter]
-    public AppState AppliationState { get; set; }
+    public AppState ApplicationState { get; set; }
     private SieveModel mySieveModel = new SieveModel
         {
             Page = 1,
@@ -63,7 +63,7 @@
     private async Task HandleFormSubmission(Divisi formData)
     {
         mySieveModel.Filters = "";
-        if (AppliationState.Id is null)
+        if (ApplicationState.Id is null)
         {
             var result = await DivisiService.CreateDivisi(formData);
             if (result.ReasonPhrase == "OK")
@@ -74,7 +74,7 @@
         }
         else
         {
-            var result = await DivisiService.UpdateDivisi(AppliationState.Id, formData);
+            var result = await DivisiService.UpdateDivisi(ApplicationState.Id, formData);
             if (result.ReasonPhrase == "OK")
             {
                 JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonDivisi");
