--- a/Client/Pages/Master Data/Components/Pendidikan/View-pendidikan.razor
+++ b/Client/Pages/Master Data/Components/Pendidikan/View-pendidikan.razor
@@ -25,17 +25,17 @@
      </div>
  </div>
 
- <Form_pendidikan Id="@AppliationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
+ <Form_pendidikan Id="@ApplicationState.Id" formData="@formData" OnFormSubmit="HandleFormSubmission" />
 
  @code {
 
     private Pendidikan formData = new Pendidikan();
     private async void HandleEditBtnPendidikan(string id)
     {
-        AppliationState.Id = id;
-        if (AppliationState.Id is not null)
+        ApplicationState.Id = id;
+        if (ApplicationState.Id is not null)
         {
-            mySieveModel.Filters = $"Id=={AppliationState.Id}";
+            mySieveModel.Filters = $"Id=={ApplicationState.Id}";
             await PendidikanService.GetPendidikanById(mySieveModel);
             formData = PendidikanService.Pendidikan;
         }
@@ -44,13 +44,13 @@
 
     private void HandleAddPendidikan()
     {
-        AppliationState.Id = null;
+        ApplicationState.Id = null;
         formData = new Pendidikan();
         StateHasChanged();
     }
 
     [CascadingParameter]
-    public AppState AppliationState { get; set; }
+    public AppState ApplicationState { get; set; }
     private SieveModel mySieveModel = new SieveModel
         {
             Page = 1,
@@ -63,7 +63,7 @@
     private async Task HandleFormSubmission(Pendidikan formData)
     {
         mySieveModel.Filters = "";
-        if (AppliationState.Id is null)
+        if (ApplicationState.Id is null)
         {
             var result = await PendidikanService.CreatePendidikan(formData);
             if (result.ReasonPhrase == "OK")
@@ -74,7 +74,7 @@
         }
         else
         {
-            var result = await PendidikanService.UpdatePendidikan(AppliationState.Id, formData);
+            var result = await PendidikanService.UpdatePendidikan(ApplicationState.Id, formData);
             if (result.ReasonPhrase == "OK")
             {
                 JSRuntime.InvokeVoidAsync("clickElementById", "closeButtonPendidikan");
