--- a/Client/Pages/Pengajuan MPP/Index.razor
+++ b/Client/Pages/Pengajuan MPP/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/pengajuan-mpp"
 @inject NavigationManager Navigation
+@inject MppFormService MppFormService
 
 <PageTitle>Pengajuan MPP</PageTitle>
 
@@ -24,30 +25,45 @@
                     <i class="bi bi-caret-right-fill text-primary"></i>
                 </div>
                 <Button bold Label="MPP Baru" btnClass="btn-info" IsBtnIcon onClick="HandleButtonClickAdd" />
-            </div>
-        </div>
-    </div>
-</div>
-<!-- end page title -->
+             </div>
+         </div>
+     </div>
+ </div>
+ <!-- end page title -->
 
 
-<div class="row">
-    <div class="col-lg-4 col-md-6 col-12">
-        <CardPlan labelCard="Dilanjutkan ke Sect. OPCC" />
-    </div>
-    <div class="col-lg-4 col-md-6 col-12">
-        <CardPlan labelCard="Disimpan Sebagai Draft" iconCardHeader="bi-pencil-square" />
-    </div>
-    <div class="col-lg-4 col-md-6 col-12">
-        <CardPlan labelCard="Pengajuan MPP Ditolak" iconCardHeader="bi-x-circle" />
-    </div>
-</div>
-<!-- end row -->
+ <div class="row">
+     <div class="col-lg-4 col-md-6 col-12">
+         <CardPlan labelCard="Dilanjutkan ke Sect. OPCC" />
+     </div>
+     <div class="col-lg-4 col-md-6 col-12">
+         <CardPlan labelCard="Disimpan Sebagai Draft" iconCardHeader="bi-pencil-square" />
+     </div>
+     <div class="col-lg-4 col-md-6 col-12">
+         <CardPlan labelCard="Pengajuan MPP Ditolak" iconCardHeader="bi-x-circle" />
+     </div>
+ </div>
+ <!-- end row -->
 
-@code {
-    private async Task HandleButtonClickAdd(MouseEventArgs e)
+ @code {
+    [CascadingParameter]
+    public AppState ApplicationState { get; set; }
+    private async Task HandleButtonClickAdd()
     {
+        if (ApplicationState.MppForm == null)
+        {
+            ApplicationState.MppForm = new MppForm();
+        }
+
         Navigation.NavigateTo("/pengajuan-mpp/input-mpp");
+        ApplicationState.MppForm.NoMpp = "nompp1";
+        ApplicationState.MppForm.NrpPemohon = "99999999";
+        ApplicationState.MppForm.NamaPemohon = "Jhon Doe";
+        var result = await MppFormService.CreateMppForm(ApplicationState.MppForm);
+        Console.WriteLine(result);
+        if (result.ReasonPhrase == "OK")
+        {
+        }
     }
 
 }
